# studio-foundation

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  BOOTSTRAP_REPORT.md  CLAUDE.md  GOAL.md  LICENSE  NOTICE.md  README.md  SECURITY.md  index.html  justfile
.githooks/: pre-commit
demo/: boot-overlay.js  index.html  index.js  index.pck
docs/adr/: 0001-godot-as-primary-engine.md  0002-webgpu-fork-isolation.md  0002-webgpu-patch-series.md  0003-gdscript-shared-gameplay-language.md  0004-rust-authoritative-backend.md  0005-postgresql-persistence.md  0006-blender-master-asset-pipeline.md  0007-one-persistent-world-many-scales.md  0008-own-the-distribution-not-the-engine.md  0013-dependency-license-policy.md  0014-product-neutral-foundation.md
docs/agents/: WORKING_AGREEMENTS.md
docs/agents/mcp/: README.md
docs/architecture/: asha-platform-strategy.md  dependency-licenses.md  vertical-slice.md  webgpu-integration.md  webgpu-payload-and-startup.md  webgpu-performance.md  webgpu-runtime-status.md
docs/ci/: README.md  patch-series.yml
docs/runbooks/: console-path.md  godot-fork-rebase.md  godot-webgpu-update.md  mobile-export.md  public-hosting.md
docs/strategy/: AI_NATIVE_PLATFORM.md  POSITIONING.md  ROADMAP.md
engine/: README.md  engine-lock.toml  rebase-4.7.1-conflicts.txt
engine/patches/: 0001-studio-webgpu-engine.patch  0004-godot-4.7.1-webgpu-interfaces.patch  0005-webgpu-shell-capability-gate.patch  0006-webgpu-single-thread-stdio.patch  0007-tint-storage-buffer-access.patch  0008-tint-image-ordering.patch  0009-tint-volatile-decoration.patch  0010-webgpu-transitive-sampler-split.patch  0011-webgpu-flatten-decoration-literals.patch  0012-tint-texture-function-params.patch  0013-webgpu-sampler-texture-stage-visibility.patch  0014-webgpu-lit-shadow-sampler-types.patch  README.md
engine/scripts/: classify_conflicts.py  emdawn_port.py  engine.py  patch_series.py  rebase.py  verify_patch_series.py
engine/scripts/tests/: test_emdawn_port.py  test_engine_versions.py  test_verify_patch_series.py
engine/toolchain/: README.md
engine/toolchain/patches/: 0001-emdawn-private-namespace.patch
games/: LICENSE
games/asha_world/deploy/: Dockerfile  _headers  start.sh
games/asha_world/project/: build_info.json  content_manifest.json  export_presets.cfg  project.godot  studio.config.json
games/asha_world/server/: Cargo.toml
games/asha_world/server/migrations/: 0001_game_init.sql  0002_world_snapshot.sql  0003_world_event_ledger.sql  0004_world_scoped_idempotency.sql
games/asha_world/server/src/: authority.rs  main.rs  persistence.rs
games/asha_world/server/tests/: boot.rs  world_events.rs
infra/: compose.yaml
infra/environments/: README.md  test.env.example
infra/nakama/: README.md  live_probe.py  local.yml  package-lock.json  package.json  test_rpc.sh  tsconfig.json
infra/nakama/src/: index.ts  nakama-runtime.d.ts
infra/nakama/tests/: runtime.test.cjs  test_live_probe.py
infra/postgres/: seed.sql
infra/postgres/init/: 01-roles-and-schemas.sql
scripts/: bootstrap.ps1  bootstrap.sh  dev_play_slice.ps1
scripts/ci/: run_all.py
services/: Cargo.toml
services/admin-cli/: Cargo.toml
services/admin-cli/src/: http.rs  main.rs
services/control-api/: Cargo.toml
services/control-api/migrations/: 0001_platform_init.sql  0002_platform_session.sql
services/control-api/src/: lib.rs  main.rs
services/dedicated-server/: Cargo.toml
services/dedicated-server/src/: lib.rs  main.rs  session.rs  transport.rs
services/integration-tests/: Cargo.toml
services/integration-tests/src/: lib.rs
services/integration-tests/tests/: db_roundtrip.rs  ws_connectivity.rs
services/shared-protocol/: Cargo.toml
services/shared-protocol/src/: lib.rs
services/world-sim/: Cargo.toml
services/world-sim/src/: economy.rs  events.rs  lib.rs  state.rs
shared/godot-addons/studio_core/: accessibility.gd  api_client.gd  asset_manifest.gd  audio_settings.gd  build_info.gd  config.gd  content_manifest.gd  crash_report.gd  feature_flags.gd  graphics_settings.gd  input_map.gd  localization.gd  log.gd  platform.gd  plugin.cfg  plugin.gd  profiles.json  render_profiles.gd  replay.gd  rng.gd  save_data.gd  scene_router.gd  session.gd  studio.gd
shared/protocol/: PROTOCOL.md
shared/protocol/fixtures/: application_request.json  application_result.json  echo.json  error_version.json  hello.json  hello_ack.json  invalid_unknown_type.json  invalid_wrong_version.json  ping.json  world_event_result.json  world_event_submit.json
shared/schemas/: asset-meta.schema.json
showcase/: boot-overlay.js  index.html
templates/godot-game/server/: Cargo.toml
templates/godot-game/server/migrations/: 0001_game_init.sql
templates/godot-game/server/src/: main.rs
tests/browser/: capture.mjs  package-lock.json  package.json  smoke.mjs
tools/: cargo_env.py  pyproject.toml
tools/asset-pipeline/: check_fixtures.py  pipeline.py
tools/benchmark/: run_benchmark.py
tools/blender/: bpy_common.py  export_gltf.py  make_deep_assets.py  make_sample_asset.py  render_preview.py  validate.py
tools/ci/: secret_scan.py  validate_workflows.py
tools/doctor/: doctor.py
tools/godot/: demo_connectivity.py  export_game.py  run_browser_smoke.py  run_godot.py  serve_web.py  sync_addons.py
tools/hooks/: pre_commit.py
tools/infra/: compose.py  db.py
tools/infra/tests/: test_compose.py  test_db.py
tools/pylib/studio_tools/: __init__.py  env.py  release.py
tools/pylib/studio_tools/mcp/: __init__.py  security.py  server_core.py  tools.py
tools/release/: attribution.py  audit_deps.py  make_sbom.py  release_validate.py
tools/screenshots/: capture_scene.py  capture_web.py  compare_screenshots.py  visual_regression.py
tools/studio-mcp/: README.md  server.py
tools/studio-mcp/tests/: test_benchmark_visual.py  test_ci_tools.py  test_clean.py  test_demo_connectivity.py  test_engine_rebase.py  test_export_game.py  test_new_game.py  test_protocol.py  test_release_tools.py  test_security.py
tools/verification/: render_probe.gd
(+90 files in other folders)
