[package]
name = "studio-dedicated-server"
version = "0.1.0"
description = "Real-time server foundation: transport abstraction (WebSocket baseline, loopback for tests), handshake + session loop"
edition.workspace = true
license.workspace = true

[dependencies]
studio-protocol = { path = "../shared-protocol" }
studio-world-sim = { path = "../world-sim" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
