[package]
name = "studio-dedicated-server"
version = "0.1.0"
description = "Real-time server foundation: transport abstraction (WebSocket baseline, loopback for tests), handshake + session loop"
edition.workspace = true
license.workspace = true

[dependencies]
studio-protocol = { path = "../shared-protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
